--- a/src/Web/web.config
+++ b/src/Web/web.config
@@ -18,6 +18,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
+    <customErrors mode="Off"/>
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
 
