--- a/src/Web/web.config
+++ b/src/Web/web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Web-20160222122242.mdf;Initial Catalog=aspnet-Web-20160222122242;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Storage.Dev" connectionString="UseDevelopmentStorage=true;" />
   </connectionStrings>
 
   <appSettings>
