--- a/src/Web/packages.config
+++ b/src/Web/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
   <package id="BrockAllen.MembershipReboot" version="8.4.0" targetFramework="net461" />
+  <package id="FireGiant.MembershipReboot.AzureStorage" version="0.0.1-build3" targetFramework="net461" />
   <package id="IdentityModel" version="1.0.0" targetFramework="net461" />
   <package id="IdentityServer3" version="2.4.0" targetFramework="net461" />
   <package id="IdentityServer3.MembershipReboot" version="2.0.0" targetFramework="net461" />
@@ -25,7 +26,6 @@
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
