--- a/nuget.config
+++ b/nuget.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="appveyor" value="https://ci.appveyor.com/nuget/firegiant-azurestoragemembershipreboot" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="appveyor-as" value="https://ci.appveyor.com/nuget/appsyn-backendmodel" />
+    <add key="appveyor-fg" value="https://ci.appveyor.com/nuget/firegiant-identity" />
   </packageSources>
 </configuration>
